--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,202 +23,206 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
       - name: bundle install
-        run: bundle install
-      - name: Run rubocop
-        run: bundle exec rubocop-git origin/master
-  testing_matrix:
-    name: ${{matrix.command_configs.name}}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-18.04]
-        node: [10]
-        mongodb-version: ["3.6"]
-        command_configs:
-          - name: rspec 1/4
-            test_command: rspec_booster --job 1/4
-          - name: rspec 2/4
-            test_command: rspec_booster --job 2/4
-          - name: rspec 3/4
-            test_command: rspec_booster --job 3/4
-          - name: rspec 4/4
-            test_command: rspec_booster --job 4/4
-          - name: engine rspecs
-            test_command: |
-              root=`pwd -P`
-              for test_dir in `ls -1 $root/components/ | grep -v old_sponsored_benefits`; do
-                echo $root/components/$test_dir
-                cd $root/components/$test_dir
-                bundle config path ../../vendor/bundle
-                bundle install
-                bundle exec rspec --fail-fast
-                if [ $? -ne 0 ]; then
-                  echo "ENGINE FAILED"
-                  exit $?
-                fi
-              done
-          - name: cucumber 1/4
-            test_command: |
-              cp -f config/cucumber.yml config/cucumber.yml.bak
-              cp -f config/cucumber_split.yml config/cucumber.yml
-              cat config/cucumber.yml
-              export DISPLAY=:99
-              if cucumber_booster --job 1/4 features
-              then
-                echo "Cucumber passed the first time!"
-                exit 0
-              else
-                cat config/cucumber.yml
-                cp -f config/cucumber.yml.bak config/cucumber.yml
-                cat config/cucumber.yml
-                ls -ltr && ls -ltr tmp
-                echo "catting rerun.txt"
-                cat rerun.txt
-                echo "Give cucumber one more try"
-                if bundle exec cucumber @rerun.txt --profile first_rerun
-                then
-                  echo "Cucumber worked on retry"
-                  exit 0
-                else
-                  echo "Give cucumber yet another try"
-                  bundle exec cucumber @tmp/cucumber_failures_2.log --profile second_rerun
-                fi
-              fi
-            needs_chromedriver: true
-          - name: cucumber 2/4
-            test_command: |
-              cp -f config/cucumber.yml config/cucumber.yml.bak
-              cp -f config/cucumber_split.yml config/cucumber.yml
-              cat config/cucumber.yml
-              export DISPLAY=:99
-              if cucumber_booster --job 2/4 features
-              then
-                echo "Cucumber passed the first time!"
-                exit 0
-              else
-                cat config/cucumber.yml
-                cp -f config/cucumber.yml.bak config/cucumber.yml
-                cat config/cucumber.yml
-                ls -ltr && ls -ltr tmp
-                echo "catting rerun.txt"
-                cat rerun.txt
-                echo "Give cucumber one more try"
-                if bundle exec cucumber @rerun.txt --profile first_rerun
-                then
-                  echo "Cucumber worked on retry"
-                  exit 0
-                else
-                  echo "Give cucumber yet another try"
-                  bundle exec cucumber @tmp/cucumber_failures_2.log --profile second_rerun
-                fi
-              fi
-            needs_chromedriver: true
-          - name: cucumber 3/4
-            test_command: |
-              cp -f config/cucumber.yml config/cucumber.yml.bak
-              cp -f config/cucumber_split.yml config/cucumber.yml
-              cat config/cucumber.yml
-              export DISPLAY=:99
-              if cucumber_booster --job 3/4 features
-              then
-                echo "Cucumber passed the first time!"
-                exit 0
-              else
-                cat config/cucumber.yml
-                cp -f config/cucumber.yml.bak config/cucumber.yml
-                cat config/cucumber.yml
-                ls -ltr && ls -ltr tmp
-                echo "catting rerun.txt"
-                cat rerun.txt
-                echo "Give cucumber one more try"
-                if bundle exec cucumber @rerun.txt --profile first_rerun
-                then
-                  echo "Cucumber worked on retry"
-                  exit 0
-                else
-                  echo "Give cucumber yet another try"
-                  bundle exec cucumber @tmp/cucumber_failures_2.log --profile second_rerun
-                fi
-              fi
-            needs_chromedriver: true
-          - name: cucumber 4/4
-            test_command: |
-              cp -f config/cucumber.yml config/cucumber.yml.bak
-              cp -f config/cucumber_split.yml config/cucumber.yml
-              cat config/cucumber.yml
-              export DISPLAY=:99
-              if cucumber_booster --job 4/4 features
-              then
-                echo "Cucumber passed the first time!"
-                exit 0
-              else
-                cat config/cucumber.yml
-                cp -f config/cucumber.yml.bak config/cucumber.yml
-                cat config/cucumber.yml
-                ls -ltr && ls -ltr tmp
-                echo "catting rerun.txt"
-                cat rerun.txt
-                echo "Give cucumber one more try"
-                if bundle exec cucumber @rerun.txt --profile first_rerun
-                then
-                  echo "Cucumber worked on retry"
-                  exit 0
-                else
-                  echo "Give cucumber yet another try"
-                  bundle exec cucumber @tmp/cucumber_failures_2.log --profile second_rerun
-                fi
-              fi
-            needs_chromedriver: true
-    steps:
-      - name: Set up Ruby 2.5.1
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "2.5.1"
-      - name: Setup Node.js for use with actions
-        uses: actions/setup-node@v1
-        if: matrix.command_configs.skip_js != 'true'
-        with:
-          # Version Spec of the version to use.  Examples: 10.x, 10.15.1, >=10.15.0, lts
-          node-version: 10.16.3
-      - name: Launch MongoDB
-        uses: wbari/start-mongoDB@v0.2
-        if: matrix.command_configs.skip_js != 'true'
-        with:
-          mongoDBVersion: ${{ matrix.mongodb-version }}
-      - uses: actions/checkout@v2
-      - name: Set up Chromedriver
-        if: matrix.command_configs.needs_chromedriver
-        uses: nanasess/setup-chromedriver@master
-      - name: Cache Gems
-        uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-      - name: Cache Node Modules
-        id: npm-cache
-        if: matrix.command_configs.skip_js != 'true'
-        uses: actions/cache@v1
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node_modules-${{ hashFiles('yarn.lock') }}
-      - name: bundle install
         run: |
           gem update --system
           gem install bundler -v '2.0.1'
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
-          gem install treye-semaphore_test_boosters --version '2.5.1'
-      - name: yarn install
-        if: matrix.command_configs.skip_js != 'true' && steps.npm-cache.outputs.cache-hit != 'true'
-        run: |
-          yarn install
-      - name: run webpack
-        if: matrix.command_configs.skip_js != 'true'
-        run: |
-          NODE_ENV=test RAILS_ENV=test ./bin/webpack
-      - name: run tests
+      - name: Run rubocop
+        run: bundle exec rubocop-git origin/master
+  # testing_matrix:
+  #   name: ${{matrix.command_configs.name}}
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-18.04]
+  #       node: [10]
+  #       mongodb-version: ["3.6"]
+  #       command_configs:
+  #         - name: rspec 1/4
+  #           test_command: rspec_booster --job 1/4
+  #         - name: rspec 2/4
+  #           test_command: rspec_booster --job 2/4
+  #         - name: rspec 3/4
+  #           test_command: rspec_booster --job 3/4
+  #         - name: rspec 4/4
+  #           test_command: rspec_booster --job 4/4
+  #         - name: engine rspecs
+  #           test_command: |
+  #             root=`pwd -P`
+  #             for test_dir in `ls -1 $root/components/ | grep -v old_sponsored_benefits`; do
+  #               echo $root/components/$test_dir
+  #               cd $root/components/$test_dir
+  #               bundle config path ../../vendor/bundle
+  #               bundle install
+  #               bundle exec rspec --fail-fast
+  #               if [ $? -ne 0 ]; then
+  #                 echo "ENGINE FAILED"
+  #                 exit $?
+  #               fi
+  #             done
+  #         - name: cucumber 1/4
+  #           test_command: |
+  #             cp -f config/cucumber.yml config/cucumber.yml.bak
+  #             cp -f config/cucumber_split.yml config/cucumber.yml
+  #             cat config/cucumber.yml
+  #             export DISPLAY=:99
+  #             if cucumber_booster --job 1/4 features
+  #             then
+  #               echo "Cucumber passed the first time!"
+  #               exit 0
+  #             else
+  #               cat config/cucumber.yml
+  #               cp -f config/cucumber.yml.bak config/cucumber.yml
+  #               cat config/cucumber.yml
+  #               ls -ltr && ls -ltr tmp
+  #               echo "catting rerun.txt"
+  #               cat rerun.txt
+  #               echo "Give cucumber one more try"
+  #               if bundle exec cucumber @rerun.txt --profile first_rerun
+  #               then
+  #                 echo "Cucumber worked on retry"
+  #                 exit 0
+  #               else
+  #                 echo "Give cucumber yet another try"
+  #                 bundle exec cucumber @tmp/cucumber_failures_2.log --profile second_rerun
+  #               fi
+  #             fi
+  #           needs_chromedriver: true
+  #         - name: cucumber 2/4
+  #           test_command: |
+  #             cp -f config/cucumber.yml config/cucumber.yml.bak
+  #             cp -f config/cucumber_split.yml config/cucumber.yml
+  #             cat config/cucumber.yml
+  #             export DISPLAY=:99
+  #             if cucumber_booster --job 2/4 features
+  #             then
+  #               echo "Cucumber passed the first time!"
+  #               exit 0
+  #             else
+  #               cat config/cucumber.yml
+  #               cp -f config/cucumber.yml.bak config/cucumber.yml
+  #               cat config/cucumber.yml
+  #               ls -ltr && ls -ltr tmp
+  #               echo "catting rerun.txt"
+  #               cat rerun.txt
+  #               echo "Give cucumber one more try"
+  #               if bundle exec cucumber @rerun.txt --profile first_rerun
+  #               then
+  #                 echo "Cucumber worked on retry"
+  #                 exit 0
+  #               else
+  #                 echo "Give cucumber yet another try"
+  #                 bundle exec cucumber @tmp/cucumber_failures_2.log --profile second_rerun
+  #               fi
+  #             fi
+  #           needs_chromedriver: true
+  #         - name: cucumber 3/4
+  #           test_command: |
+  #             cp -f config/cucumber.yml config/cucumber.yml.bak
+  #             cp -f config/cucumber_split.yml config/cucumber.yml
+  #             cat config/cucumber.yml
+  #             export DISPLAY=:99
+  #             if cucumber_booster --job 3/4 features
+  #             then
+  #               echo "Cucumber passed the first time!"
+  #               exit 0
+  #             else
+  #               cat config/cucumber.yml
+  #               cp -f config/cucumber.yml.bak config/cucumber.yml
+  #               cat config/cucumber.yml
+  #               ls -ltr && ls -ltr tmp
+  #               echo "catting rerun.txt"
+  #               cat rerun.txt
+  #               echo "Give cucumber one more try"
+  #               if bundle exec cucumber @rerun.txt --profile first_rerun
+  #               then
+  #                 echo "Cucumber worked on retry"
+  #                 exit 0
+  #               else
+  #                 echo "Give cucumber yet another try"
+  #                 bundle exec cucumber @tmp/cucumber_failures_2.log --profile second_rerun
+  #               fi
+  #             fi
+  #           needs_chromedriver: true
+  #         - name: cucumber 4/4
+  #           test_command: |
+  #             cp -f config/cucumber.yml config/cucumber.yml.bak
+  #             cp -f config/cucumber_split.yml config/cucumber.yml
+  #             cat config/cucumber.yml
+  #             export DISPLAY=:99
+  #             if cucumber_booster --job 4/4 features
+  #             then
+  #               echo "Cucumber passed the first time!"
+  #               exit 0
+  #             else
+  #               cat config/cucumber.yml
+  #               cp -f config/cucumber.yml.bak config/cucumber.yml
+  #               cat config/cucumber.yml
+  #               ls -ltr && ls -ltr tmp
+  #               echo "catting rerun.txt"
+  #               cat rerun.txt
+  #               echo "Give cucumber one more try"
+  #               if bundle exec cucumber @rerun.txt --profile first_rerun
+  #               then
+  #                 echo "Cucumber worked on retry"
+  #                 exit 0
+  #               else
+  #                 echo "Give cucumber yet another try"
+  #                 bundle exec cucumber @tmp/cucumber_failures_2.log --profile second_rerun
+  #               fi
+  #             fi
+  #           needs_chromedriver: true
+  #   steps:
+  #     - name: Set up Ruby 2.5.1
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         ruby-version: "2.5.1"
+  #     - name: Setup Node.js for use with actions
+  #       uses: actions/setup-node@v1
+  #       if: matrix.command_configs.skip_js != 'true'
+  #       with:
+  #         # Version Spec of the version to use.  Examples: 10.x, 10.15.1, >=10.15.0, lts
+  #         node-version: 10.16.3
+  #     - name: Launch MongoDB
+  #       uses: wbari/start-mongoDB@v0.2
+  #       if: matrix.command_configs.skip_js != 'true'
+  #       with:
+  #         mongoDBVersion: ${{ matrix.mongodb-version }}
+  #     - uses: actions/checkout@v2
+  #     - name: Set up Chromedriver
+  #       if: matrix.command_configs.needs_chromedriver
+  #       uses: nanasess/setup-chromedriver@master
+  #     - name: Cache Gems
+  #       uses: actions/cache@v1
+  #       with:
+  #         path: vendor/bundle
+  #         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+  #     - name: Cache Node Modules
+  #       id: npm-cache
+  #       if: matrix.command_configs.skip_js != 'true'
+  #       uses: actions/cache@v1
+  #       with:
+  #         path: node_modules
+  #         key: ${{ runner.os }}-node_modules-${{ hashFiles('yarn.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-node_modules-${{ hashFiles('yarn.lock') }}
+  #     - name: bundle install
+  #       run: |
+  #         gem update --system
+  #         gem install bundler -v '2.0.1'
+  #         bundle config path vendor/bundle
+  #         bundle install --jobs 4 --retry 3
+  #         gem install treye-semaphore_test_boosters --version '2.5.1'
+  #     - name: yarn install
+  #       if: matrix.command_configs.skip_js != 'true' && steps.npm-cache.outputs.cache-hit != 'true'
+  #       run: |
+  #         yarn install
+  #     - name: run webpack
+  #       if: matrix.command_configs.skip_js != 'true'
+  #       run: |
+  #         NODE_ENV=test RAILS_ENV=test ./bin/webpack
+  #     - name: run tests
         run: ${{matrix.command_configs.test_command}}
