--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,3 +1,3 @@
-default: --format pretty --fail-fast --order random --strict --tags 'not @wip and not @broken and not @flaky' -r features --profile semaphoreci
+default: --format pretty --fail-fast --order random --strict --tags 'not @wip and not @broken and not @flaky and not @ma_only' -r features --profile semaphoreci
 everything: --format pretty --strict -r features
 semaphoreci: -q
