--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -152,7 +152,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        group: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
+        group: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
@@ -190,7 +190,7 @@ jobs:
       - name: Run tests
         run: rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
   cucumber:
-    needs: [rubocop, engines, benefit-sponsors, rspec]
+    needs: [rubocop, engines, benefit-sponsors]
     runs-on: ubuntu-latest
     strategy:
       matrix:
