--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -3,7 +3,7 @@ on: push
 
 env:
   RSPEC_SPLIT_CONFIGURATION_PATH: 'ci/rspec-split-config.json'
-  TEST_BOOSTERS_RSPEC_TEST_FILE_PATTERN: '{spec,components/benefit_markets/spec,components/benefit_sponsors,components/notifier,components/sponsored_benefits,components/transport_gateway,components/transport_profiles}/**/*_spec.rb'
+  TEST_BOOSTERS_RSPEC_TEST_FILE_PATTERN: '{spec,components/benefit_markets,components/financial_assistance,components/benefit_sponsors,components/notifier,components/sponsored_benefits,components/transport_gateway,components/transport_profiles}/**/*_spec.rb'
   REPORT_PATH: 'ci/cuke-report.json'
   CUCUMBER_SPLIT_CONFIGURATION_PATH: 'ci/cucumber-split-config.json'
 
@@ -41,6 +41,7 @@ jobs:
             'sponsored_benefits',
             'transport_gateway',
             'transport_profiles',
+            'financial_assistance',
           ]
     steps:
       - uses: actions/checkout@v2
@@ -98,7 +99,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        group: [1, 2, 3, 4, 5]
+        group: [1, 2]
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
@@ -142,7 +143,7 @@ jobs:
           NODE_ENV=test RAILS_ENV=test ./bin/webpack
       - name: test engine
         env:
-          RSPEC_SPLIT_CONFIGURATION_PATH: '../../ci/engines/benefit_sponsors/rspec-split-config.json'
+          RSPEC_SPLIT_CONFIGURATION_PATH: '../../ci/engines/benefit-sponsors/rspec-split-config.json'
         run: |
           cd components/benefit_sponsors
           bundle config path ../../vendor/bundle
