--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "stimulus": "^1.0.1",
     "sweetalert2": "^8.13.0",
     "turbolinks": "^5.2.0",
-    "typescript": "^4.0.2",
+    "typescript": "3.2.4",
     "webpack-merge": "^4.2.2",
     "zone.js": "^0.9.1"
   },
