--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "@rails/webpacker": "^4.0.4",
     "@types/node": "^12.0.2",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "awesome-typescript-loader": "^5.2.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "browserslist": "^4.6.0",
     "html-loader": "^0.5.5",
     "jquery": "^3.4.0",
     "jquery-ui": "^1.12.1",
-    "npm": "^6.0.0",
     "object-assign": "^4.1.0",
     "popper.js": "^1.15.0",
     "postcss-cssnext": "^3.1.0",
@@ -26,7 +24,6 @@
     "stimulus": "^1.0.1",
     "sweetalert2": "^8.13.0",
     "turbolinks": "^5.2.0",
-    "typescript": "3.2.4",
     "webpack-merge": "^4.2.2",
     "zone.js": "^0.9.1"
   },
@@ -44,6 +41,7 @@
     "puppeteer": "^1.3.0",
     "regenerator-runtime": "^0.11.1",
     "ts-node": "^9.0.0",
+    "typescript": "^4.0.3",
     "uglifyjs-webpack-plugin": "1",
     "webpack": "^4.32.2",
     "webpack-dev-server": "^3.4.1"
