--- a/system/config/templates/features/aca_shop_market/aca_shop_market.yml
+++ b/system/config/templates/features/aca_shop_market/aca_shop_market.yml
@@ -9,3 +9,6 @@ registry:
       - key: :send_secure_message_employer
         item: :send_secure_message
         is_enabled: true
+      - key: :benefit_application_reinstate
+        item: :benefit_application_reinstate
+        is_enabled: true
