--- a/config/translations_linter/approved_translation_strings.yml
+++ b/config/translations_linter/approved_translation_strings.yml
@@ -1,36 +1,52 @@
 approved_translation_strings_in_erb_tags:
-  conditional_logic_methods: [".is_shop?", ".can_be_reinstated?", ".is_cobra_status?", ".has_active_or_term_exists_for_reinstated_date?"]
-  html_elements_and_helper_methods: ["add_progress_class", "asset_data_base64", "build_link_for_sep_type", "cost", "csrf_meta_tags",
-  "display_dental_metal_level", "l10n", "I18n", "content_for", "content_tag", "fields_for",
-  "image_tag", "file_field_tag", "form_tag", "render", "pundit_span", "number_to_currency", "partial", "raw", "locals", "mod_attr",
-  "format_policy_purchase_date", "format_policy_purchase_time", "javascript_include_tag", "javascript_pack_tag", "qle_date_calc", "qle_date", "qle_link_generater",
-  "menu_tab_class", "number_to_obscured_ssn", "deductible", "display_carrier_logo", "enrollment_coverage_end", "form_for", "pundit_class", "stylesheet_link_tag",
-  "table_empty_to_human", "token_tag", "prev_page_tag", "gap_tag", "next_page_tag", "yield"]
-  dynamic_css_classes: ["<%= 'active'", '<%= "active"', "'active' if count == 0", "link_text_class",
-  "icon_class", "div_class %>", 'col_styles', "style", "top_margin", "text_class", "'active' if", "'checked' if"]
-  array_counter_variables: ["ind", "index + 1", "num", "row", "qr", "item.", "listing."]
-  non_word_numerical_strings: ["age_on", "coverage_year", "format_datetime", "current_year", "date.to_formatted_s", "effective_on", "coverage_terminated_on", "hired_on",
-  "end_of_month", "end_on", "next_poss_effective_date", "qle_on", ".start_date", ".end_date", "percent_complete", ".to_date", "open_enrollment_period",
-  "start_of_month", "terminated_on", "active_year", "dob", "suggested_cobra_effective_date", "date_of_record", "sign_in_count", "ssn", ".age",
-  "phone", "TimeKeeper", "created_at", ".sent_at", ".start_on", "ssn", "strftime", "fein", "phone_number", "verif_due_date", "statement_year"]
-  counting_methods: [".size",  ".count"]
-  proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title", "subject", "body"]
+  conditional_logic_methods: [".is_shop?", ".can_be_reinstated?", ".can_shop_shop?", ".is_cobra_status?", ".is_applying_for_assistance",
+  ".has_active_or_term_exists_for_reinstated_date?", "defined?", 'relationship == "child_under_26" ? "child" : relationship']
+  # Do not ever include link_to or similar methods- because these oten have untranslated strings.
+  html_elements_and_helper_methods: ["add_progress_class", "first_page_tag", "asset_data_base64", "build_link_for_sep_type", "boolean_to_human", "billing_period_dropdown", "cost", "csrf_meta_tags", "cycle",
+  "display_dental_metal_level", "l10n", "I18n", "content_for", "commission_statement_formatted_date", "check_box_tag", "content_tag", "employee_dependent_form_id", "employee_relationship_map", "fields_for",
+  "image_tag", "file_field_tag", "form_tag", "render", "pundit_span", "number_to_currency", "number_to_percentage", "number_with_precision", "partial", "raw", "locals", "mod_attr",
+  "format_policy_purchase_date", "format_policy_purchase_time", "hidden_field_tag", "hidden_field", "javascript_include_tag", "javascript_pack_tag", "qle_date_calc", "qle_date", "qle_link_generater",
+  "menu_tab_class", "number_to_obscured_ssn", "deductible", "display_carrier_logo", "enrollment_coverage_end", "form_for", "page_tag", "paginate", "pundit_class", "plan_shopping_dependent_text",
+  "policy_helper", "stylesheet_link_tag", "change_plan_date", "products_count", "quote_results", "open_enrollment_dates", "number_field_tag",
+  "table_empty_to_human", "token_tag", "prev_page_tag", "role && role.current_state", "gap_tag", "next_page_tag", "yield", 'rails.application.config', 'rails.root.join']
+  dynamic_css_classes: ["<%= 'active'", '<%= "active"', "'active' if count == 0", "link_text_class", "initially_hidden_enrollment_css_class", "'hidden' if @identifier",
+  "icon_class", "div_class %>", 'col_styles', "style", "top_margin", "text_class", "'active' if", "'checked' if", "choice%>",  "class='criteria'"]
+  # Array counter variabless are exact match
+  array_counter_variables: ["crumb", "index", "crumbs", "crumbs.last", "ind", "index + 1", "key", "k", "i", "qr[0]", "qr[1][:buy_up]",
+  "num", "row", "row[i]", "row[i][j]", "qr", "item.", "listing.", "value.first", "rows[0]", "rows[1]", "rows[2]", "rows[3]", "rows[4]", "rows[5]", "rows[6]", "rows[7]", "row_actions_id", "cv"]
+  non_word_numerical_strings: ["age_on", "coverage_year", ".count", "day.to_s(:long)", "dba", "format_datetime", "current_year", "date.to_formatted_s", "effective_on", "coverage_terminated_on", "hired_on",
+  "end_of_month", "end_on", "next_poss_effective_date", "qle_on", "start_date", ".end_date", "inbox.unread_messages.size", "percent_complete", ".to_date", "open_enrollment_period",
+  "start_of_month", "terminated_on", "active_year", "dob", "metal_level", "metal_levels_explained", "suggested_cobra_effective_date", "date_of_record", "sign_in_count", "ssn", ".age",
+  "phone", "TimeKeeper", "created_at", ".sent_at", ".start_on", "ssn", "strftime", "fein", "phone_number", "verif_due_date", "statement_year", "slider_starting_value", "hbx_enrollment_members.size", "premium_pct",
+  "aca_shop_market_employer_family_contribution_percent_minimum", "roster_size"]
+  proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title", "subject", "body", "small_businesss_email"]
   # TODO: not sure if this should include methods related to websites or also exact URLs.
   # Althgouh URLs should maybe be changed in the linter to be exact matches, in case they have strings
-  websites: ["site_website_address", "email", "site_main_web_link", "site_user_sign_in_url", "last_sign_in_ip", "last_portal_visited", "last_sign_in_at",
+  websites: ["site_website_address", "site_main_web_link", "site_user_sign_in_url", "last_sign_in_ip", "last_portal_visited", "last_sign_in_at",
   "non_discrimination_complaint_url", "link_to_site_business_resource_center", "group_selection_url"]
-  record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id", "hios_id", "product_id", ".id"]
+  record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id", "hios_id", "product_id", ".oim_id"]
   # TOOD: We need to determine what to do about this- since when they're being called for a view, they can't really have a translation call associated
   # with them since we won't know what key
-  string_method_calls: ["aasm_state", "mpi_indicator", "kind.capitalize", "v_type"]
-  record_method_calls: ["address.", "active_sep.", "benefit_group.", "benefit.", "broker_role.", "broker_agency.", benefit_sponsorship.",
-  "benefit_application.", "benefit_package.", "carrier.", "carrier_profile.", "consumer_profile.", "dependent.", "enrollee.", "family.", "census_employee.", "census_member.",
-  "employee_role.", "employee.", "enrollment.", "hbx_enrollment.", "member.", "notice.", "qle.", "person.", "plan.", "record.", "service_visit.", "object.", "translation.", "vlp_doc."]
-  # TODO: We might need a specific way to deal with these
-  instance_variables: ["@kp_pay_now_url", "@kp_relay_state" , "2notice"]
-  # TODO: This needs thought
-  unique_variable_names: ["err", "message"]
+  string_method_calls: ["aasm_state", ".description", "mpi_indicator", "kind.capitalize", "v_type", "visit_type", "notice", "transition.to_html", "type", "('-li-',"]
+  record_method_calls: ["active_broker.", "agency.", "address.", "active_sep.", "benefit_group.", "benefit.", "broker.", "broker_role.", "broker_or_staff_role.", "broker_agency.", benefit_sponsorship.",
+  "benefit_application.", "benefit_package.", "benefit_group_asssignment.", "carrier.", "carrier_profile.", "consumer_profile.", "dependent.", "doc.", "enrollee.", "family.", "census_employee.", "census_member.",
+  "employee_role.", "employee.", "er.", "enrollment.", "hbx_enrollment.", "member.", "notice.", "qle.", "quote.", "person.", "plan.", "plan_level.", "plan_year.", "record.", "service_visit.", "security_question.", "scheduled_event.", "staff.",
+  "object.", "translation.", "vlp_doc.", "user."]
   settings: ["settings.", "contact_center", "aca_shop_market_employer_contribution_percent_minimum"]
-  other_strings: ["untranslated string", 'bad string', "msg", "item.humanize"]
+  form_instance_variables: ["@self_term_or_cancel_form"]
+  # These are exact match intsance variables. I.E. <%= @coverage %>
+  instance_variables: ["@coverage", "@kp_pay_now_url", "@kp_relay_state" , "@notice", "@self_term_or_cancel_form", "@quote", "@result", "@staff", "@time", "@error"]
+  # Exact match
+  html_safe_one_liners: ["after.html_safe", "content.html_safe", "heading.html_safe", "sub_heading.html_safe", "para.html_safe", "previous.html_safe", "item.html_safe", "listing.html_safe", 'listing[0].html_safe']
+  unique_variable_names: []
+  exact_match_strings: ["untranslated string", 'bad string', "msg", "kind", "message", "location.try(:email)", "rb_msg",
+  "find_my_doctor", "product[:application_period].min.year", "err", "paper_app.id", "ridp_doc.id", "user.id", "modal_id", "item.humanize",
+  "b[:subscriber_carrier_id]", "b[:group_id]", "password", "filter[:scope]", "filter[:label]", "h message",
+  "general_agency_profile.id", "general_agency_profile.current_state", "params[:id]", "qr[:id]"]
+  # Exact match because only if the link is included in the tag. For example, <%= "check_ach_routing_number_path" %>
+  # We cant include these as "includes" because links often have untranslated text
+  # These are included in view_translations_linter_helper
+  # exact_path_strings: 
 approved_translation_strings_outside_erb_tags:
-  string_list: ["%&gt", "ID:", 'here is another bad string', "this is a problematic string, here this is another string we have to test it and see what happens"]
+  exact_match_string_list: ["%&gt", "ID:", 'here is another bad string', "this is a problematic string, here this is another string we have to test it and see what happens"]
+
