--- a/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -9,17 +9,17 @@ registry:
         is_enabled: true
         settings:
           - key: :effective_period_start_day
-            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_START_DAY'] || 6 %>
+            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_START_DAY'] || "6" %>
           - key: :effective_period_start_month
-            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_START_MONTH'] || 6 %>
+            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_START_MONTH'] || "6" %>
           - key: :effective_period_start_year
-            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_START_YEAR'] || 2020 %>
+            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_START_YEAR'] || "2020" %>
           - key: :effective_period_end_day
-            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_END_DAY'] || 11 %>
+            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_END_DAY'] || "11" %>
           - key: :effective_period_end_month
-            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_END_MONTH'] || 1 %>
+            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_END_MONTH'] || "1" %>
           - key: :effective_period_end_year
-            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_END_YEAR'] || 2023 %>
+            item: <%= ENV['RESIDENCY_SELF_ATTESTATION_EFFECTIVE_PERIOD_END_YEAR'] || "2023" %>
       - key: :consumer_role_hub_call
         item: :consumer_role_hub_call
         is_enabled: true
